New features and fixes
- Fixed file descriptor exhaustion during installation by wrongy configured limits
- Added way to rotate databases passwords
- Fixed mariadb installation failing
- Added config flags to disable disk cpu and memory anti overallocation guard
